--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit your to-do item</h1>
+<h1>Edit <%= @item.title %></h1>
 
 <%= form_for @item do |f| %>
 
@@ -16,8 +16,13 @@
   <%= f.text_area :description, placeholder: "Details" %>
   <%= f.label :description %>
 </div>
-
+<div>
+  <%= f.check_box :priority %>
+  <%= f.label :priority %>
+</div>
 <div>
   <%= f.submit %>
 </div>
 <% end %>
+
+<%= link_to 'Back to list', items_path %>
