--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -16,8 +16,14 @@
   <%= f.text_area :description, placeholder: "Details" %>
   <%= f.label :description %>
 </div>
+<div>
+  <%= f.check_box :priority %>
+  <%= f.label :priority %>
+</div>
 
 <div>
   <%= f.submit %>
 </div>
 <% end %>
+
+<%= link_to 'Back to list', items_path %>
